# ACM-SIGMOD-19-Programming-Contest

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Sorting Benchmark.ipynb  benchmark_hist.sh  benchmark_rw.sh  compile.sh  package.sh  run_radix.sh  run_sort.sh  test_sort.sh  validate.sh
slides/: .gitmodules  Makefile  main.tex
slides/latex-common/: README.md  cmd.tex  defs.tex  latex-common.tex  lst.tex  pkg.tex
src/: CMakeLists.txt  benchmark.hpp  compress_main.cpp  constants.hpp  hist.cpp  hist.hpp  hist_main.cpp  histogram_benchmark.cpp  hwtop.hpp  main.cpp  mmap.hpp  partition.cpp  partitioning_benchmark.cpp  radix.cpp  radix.hpp  radix_main.cpp  radix_partition.cpp  radix_partition.hpp  rand16.cpp  read_write.cpp  record.cpp  record.hpp  sort.cpp  sort.hpp  sort_main.cpp  sorting_benchmark.cpp  std_sort.cpp  stl_sort.cpp  utility.cpp  utility.hpp
